crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__native_queries__select_where_relationship.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "Audioslave",
        "AlbumId": 10
      },
      {
        "title": "Aquaman",
        "AlbumId": 254
      },
      {
        "title": "Adorate Deum: Gregorian Chant from the Proper of the Mass",
        "AlbumId": 272
      },
      {
        "title": "A Copland Celebration, Vol. I",
        "AlbumId": 296
      }
    ]
  }
]
